<resources>
    <string name="app_name">There is no point</string>
    <string name="start_game">Start Game</string>
    <string name="settings">Settings</string>
    <string name="highscore">Highscore</string>
    <string name="game_over">Game Over!</string>
    <string name="your_score_is">Your score is %d</string>
    <string name="your_time_is">Your best reaction time is: %.2f</string>
    <string name="best_score_ever">That\'s your new best score! Good job!</string>
    <string name="best_time_ever">That\'s your new best reaction time! Good job!</string>
    <string name="try_again_question">Want to try again?</string>
    <string name="sure">Sure!</string>
    <string name="no">No</string>
    <string name="default_clock">0.0</string>
    <string name="default_score">0</string>
    <string name="default_bestScore">Best score: %d</string>
    <string name="default_bestTime">Best time: %.2f</string>
</resources>
